--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="css/style.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet"/> 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -29,14 +30,14 @@
 	
 			</div>
 			
-			<nav class="navbar navbar-expand-sm bg-dark navbar-dark d-flex justify-content-center" id="topNavbar">
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark" id="topNavbar">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#topNavbarButtons">
 						<span class="navbar-toggler-icon"</span>                        
 					</button>
 				</div>
 				<div class="collapse navbar-collapse" id="topNavbarButtons">
-					<ul class="navbar-nav mr-auto">
+					<ul class="navbar-nav mr-auto mx-auto">
 					<li class="nav-item"><a class="nav-link" href="index.html">Accueil</a></li>
 					<li class="nav-item"><a class="nav-link" href="aikido.html">L'aikido</a></li>
 					<li class="nav-item"><a class="nav-link" href="cours.html">Les cours</a></li>
@@ -45,20 +46,18 @@
 				</div>
 			</nav>
 
-			<div class="alert alert-info alert-dismissible fade show" id="breakingNews">
-				<button type="button" class="close" data-dismiss="alert" aria-label="close" id="closeAlertButton" onclick="setTimeout(resetOffsetToDefault, 100);">&times;</button>
-				Attention : le cours du 28/04/2018 s'arrêtera à 10h au lieu de 12h.	
-			</div>
-	
 		</nav>
 	</div>
 	
 	<div class="content" id="mainContent">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-5 embed-responsive">
+				<div class="col-sm-5 embed-responsive embed-responsive-16by9">
 					<iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1345.0727853664273!2d-149.55559334456666!3d-17.534209200817354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x769a39f06857e417%3A0xfed9c2d611ef3e5b!2sDojo+Vaitavatava+Municipal+Hall+Martial+Arts+De+L&#39;union+Sacr%C3%A9e!5e0!3m2!1sen!2s!4v1524794431236" frameborder="0" style="border:0" allowfullscreen margin="auto"></iframe>
 				</div>
+
+				<br/>
+				<br/>
 				
 				<div class="col-sm-1">
 				</div>
@@ -74,7 +73,7 @@
 
 					<p>
 						<u>Ou écrivez-nous :</u><br/>
-						<a href="mailto:dojoaikidopapeete@gmail.com">dojoaikidopapeete@gmail.com</a>
+						<p style="text-indent: 40px"><a href="mailto:dojoaikidopapeete@gmail.com">dojoaikidopapeete@gmail.com</a></p>
 					</p>
 
 					<p>
